src/objects/Payonomy_Extract_History__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <label>Engine</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_File__c</fullName>
        <label>Exception File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extraction_File__c</fullName>
        <label>Extraction File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payonomy_Reference__c</fullName>
        <label>Payonomy Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Display__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISH-ENGINE error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Text__c</fullName>
        <label>Status Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_File__c</fullName>
        <label>Summary File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Exceptions__c</fullName>
        <label>Total Exceptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Mandate__c</fullName>
        <label>Total Instructions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payonomy Extract History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PEH - {0}</displayFormat>
        <label>Extract History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payonomy Extract Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>